# Pluton

./: .gitignore  Cargo.toml  README.md  analysis_results.md  bump-check.sh  check-bump-seed.sh  data-matching-report.md  enhanced-report.md  final-report.md  professional_audit_report.md  report.md  test-report.md  test_project_audit.md
clean-test/src/: lib.rs
src/: error.rs  lib.rs  main.rs  utils.rs  visitor.rs
test-project/: Anchor.toml  Cargo.toml
test-project/programs/test-project/src/: ata_example.rs  init_if_needed_example.rs  lib.rs  reinitialization_example.rs
test-project/src/: calculator.rs  large_integers.rs  lib.rs  pda_program.rs  token_program.rs
vulnerabilities/: account_data_matching.json  account_data_reallocation.json  arbitrary_cpi.json  bump_seed_canonicalization.json  index.json  insecure_initialization.json  loss_of_precision.json  missing_ownership_check.json  missing_signer_check.json  overflow_underflow.json  remaining_accounts.json  seed_collisions.json  type_cosplay.json
vulnerability-test/: Cargo.toml
vulnerability-test/src/: bump_seed_test.rs  data_matching.rs  fixed.rs  lib.rs
